
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEF"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/head_text"
            android:gravity="center"
            android:textSize="27sp"
            android:textColor="@color/doder_blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_top_bar"
        android:layout_above="@id/div_tab_bar"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inputTextView"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:textAlignment="viewEnd"
                android:maxLines="2"
                android:text="@string/formula"
                android:textSize="21sp"
                android:textColor="@color/lightsea_green"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/symbolView"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical"
                android:text="@string/calculate_symbol"
                tools:ignore="RtlCompat"
                android:textSize="21sp"
                android:textColor="@color/lightsea_green"/>

            <TextView
                android:id="@+id/resultView"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical"
                android:text="@string/result"
                tools:ignore="RtlCompat"
                android:textSize="21sp"
                android:textColor="@color/lightsea_green"/>



            <TextView
                android:id="@+id/initialinput"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"

                android:ems="10"
                android:maxLines="4"
                android:gravity="bottom"
                android:textSize="18sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/turquoise"
                android:text="@string/initial_input"

                tools:ignore="RtlCompat"
                android:scrollHorizontally="true"
                />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

<!--                <LinearLayout-->
<!--                    android:id="@+id/row_4"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center"-->
<!--                    android:paddingTop="6dp"-->
<!--                    android:paddingBottom="6dp"-->
<!--                    android:orientation="horizontal">-->
<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content">-->
<!--                    </LinearLayout>-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/row_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="6dp"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <Button
                            android:id="@+id/button_1"
                            style="@style/insidebtn"
                            android:text="@string/button_num_1"
                            />

                        <Button
                            android:id="@+id/button_2"
                            style="@style/insidebtn"
                            android:text="@string/button_num_2"/>

                        <Button
                            android:id="@+id/button_3"
                            style="@style/insidebtn"
                            android:text="@string/button_num_3" />

                        <Button
                            android:id="@+id/button_11"
                            style="@style/insidebtn"
                            android:text="@string/button_add" />

                        <Button
                            android:id="@+id/button_16"
                            style="@style/insidebtn"
                            android:text="@string/button_sub" />

                        <Button
                            android:id="@+id/button_13"
                            style="@style/insidebtn"
                            android:text="@string/button_bracket_l" />

                        <Button
                            android:id="@+id/button_18"
                            style="@style/insidebtn"
                            android:text="@string/button_bracket_r" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_4"
                            style="@style/insidebtn"
                            android:text="@string/button_num_4" />

                        <Button
                            android:id="@+id/button_5"
                            style="@style/insidebtn"
                            android:text="@string/button_num_5" />

                        <Button
                            android:id="@+id/button_6"
                            style="@style/insidebtn"
                            android:text="@string/button_num_6" />

                        <Button
                            android:id="@+id/button_12"
                            style="@style/insidebtn"
                            android:text="@string/button_multi" />

                        <Button
                            android:id="@+id/button_17"
                            style="@style/insidebtn"
                            android:text="@string/button_div" />

                        <Button
                            android:id="@+id/button_14"
                            style="@style/insidebtn"
                            android:text="@string/button_del" />

                        <Button
                            android:id="@+id/button_15"
                            style="@style/insidebtn"
                            android:text="@string/button_clr" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_7"
                            style="@style/insidebtn"
                            android:text="@string/button_num_7" />

                        <Button
                            android:id="@+id/button_8"
                            style="@style/insidebtn"
                            android:text="@string/button_num_8" />

                        <Button
                            android:id="@+id/button_9"
                            style="@style/insidebtn"
                            android:text="@string/button_num_9" />

                        <Button
                            android:id="@+id/button_10"
                            style="@style/insidebtn"
                            android:text="@string/button_num_0" />

                        <Button
                            android:id="@+id/button_19"
                            style="@style/insidebtn"
                            android:text="@string/button_point"/>

                        <Button
                            android:id="@+id/button_20"
                            android:layout_width="200dp"
                            android:layout_height="90dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/border_line_while"
                            android:text="@string/button_equal"
                            android:textSize="36sp" />
                    </LinearLayout>

                </LinearLayout>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/ly_tab_bar"/>

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            app:chipStartPadding="62dp"
            android:id="@+id/chip_topg1"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/selfStyle"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:textSize="21sp"
            android:textColor="@color/dark_turquoise"
            android:text="@string/chip_nav_pg1"/>

        <Button
            app:chipStartPadding="62dp"
            android:textSize="21sp"
            android:id="@+id/chip_topg2"
            android:layout_gravity="center"
            style="@style/selfStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/chip_nav_pg2"/>

    </LinearLayout>


</RelativeLayout>
