<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEF">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/head_text"
            android:gravity="center"
            android:textSize="27sp"
            android:textColor="@color/doder_blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/ly_tab_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ly_top_bar"
        android:layout_above="@id/div_tab_bar"
        tools:context=".rightFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btn_addsingletest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                android:text="@string/sample_add" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/formula_add"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingLeft="2sp"
                            android:paddingStart="2sp"
                            android:paddingRight="2sp"
                            android:paddingEnd="2sp"

                            android:gravity="center_vertical"
                            android:textAlignment="viewStart"
                            android:textSize="15sp"
                            android:text="@string/single_test_input_title"
                            tools:ignore="RtlCompat" />

                        <EditText
                            android:id="@+id/formula_add_edit"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="end"
                            android:paddingStart="2sp"
                            android:paddingLeft="2sp"
                            android:paddingEnd="2sp"
                            android:paddingRight="2sp"
                            android:text="@string/single_test_input"
                            android:textAlignment="viewEnd"
                            android:textSize="21sp"
                            android:autofillHints="0000000"
                            android:hint="@string/formula_add_sug"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/expect_value"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingLeft="2sp"
                            android:paddingStart="2sp"
                            android:paddingRight="2sp"
                            android:paddingEnd="2sp"
                            android:gravity="center_vertical"
                            android:textAlignment="viewStart"
                            android:text="@string/single_test_result_title"
                            tools:ignore="RtlCompat" />

                        <EditText
                            android:id="@+id/expect_value_edit"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="end"
                            android:paddingStart="2sp"
                            android:paddingLeft="2sp"
                            android:paddingEnd="2sp"

                            android:paddingRight="2sp"
                            android:text="@string/single_test_result"
                            android:textAlignment="viewEnd"
                            android:textSize="21sp"
                            />
                    </LinearLayout>

<!--                    <LinearLayout-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:orientation="vertical"-->
<!--                        android:layout_weight="4">-->
<!--                        <TextView-->
<!--                            android:id="@+id/tView5"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="0dp"-->
<!--                            android:layout_weight="1"-->
<!--                            android:gravity="center_vertical"-->
<!--                            android:paddingStart="2sp"-->
<!--                            android:paddingLeft="2sp"-->
<!--                            android:paddingEnd="2sp"-->
<!--                            android:paddingRight="2sp"-->
<!--                            android:text="@string/single_test_output_title"-->
<!--                            android:textAlignment="viewStart"-->
<!--                            tools:ignore="RtlCompat" />-->
<!--                        <TextView-->
<!--                            android:id="@+id/tView6"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="0dp"-->
<!--                            android:layout_weight="2"-->
<!--                            android:gravity="end"-->
<!--                            android:paddingStart="2sp"-->
<!--                            android:paddingLeft="2sp"-->
<!--                            android:paddingEnd="2sp"-->
<!--                            android:paddingRight="2sp"-->
<!--                            android:text="@string/single_test_output"-->
<!--                            android:textAlignment="viewEnd"-->
<!--                            android:textSize="21sp" />-->
<!--                    </LinearLayout>-->

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_import_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/batch_import_samples"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="24sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_export_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/export_samples"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="24sp"

                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/btn_start_testing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_testing"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:textSize="27sp"

                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_table_clean"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="25dp"
                android:textSize="27sp"
                android:text="@string/table_clean"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"

            >


            <TextView
                android:id="@+id/tView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/table_head_title"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="21sp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/table_title_case_count" />

                <TextView
                    android:id="@+id/View_case_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"

                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/table_content_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"

                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/table_title_pass_rate" />

                <TextView
                    android:id="@+id/View_pass_rate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"

                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/table_content_2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                app:chipStartPadding="62dp"
                android:id="@+id/chip_topg1"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/selfStyle"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:text="@string/chip_nav_pg1"/>

            <Button
                app:chipStartPadding="62dp"
                android:textSize="21sp"
                android:id="@+id/chip_topg2"
                android:layout_gravity="center"
                style="@style/selfStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="25dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_turquoise"
                android:text="@string/chip_nav_pg2"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>